# fitbit-backup

./: .gitignore  README.md  backup.py  pyproject.toml  requirements.txt  service.bat
data/: fitbit.csv
