[tool.poetry]
name = "fitbit-backup"
version = "0.1.0"
description = "An experimental tool for backing up Fitbit data as a CSV."
authors = ["Jeremy Grifski <jeremy.grifski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
GitPython = "^3.1.41"
fitbit = "^0.3.1"
python-dotenv = "^1.0.0"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
